<?xml version="1.0"?>
<!-- <package> -->
<package format="2">

  <name>iiwa_ur_demo</name>
  <version>0.1.0</version>
  <description>Packages to control iiwa_ur with MoveIt!</description>

  <author email="liyihui.ing@gmail.com">Yihui Li</author>
  <maintainer email="liyihui.ing@gmail.com">Yihui Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>joy</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rosbag</depend>
  <depend>rviz</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>iiwa_ur_description</depend>

</package>
