<?xml version="1.0"?>
<package format="2">
  <name>iiwa_ur_gazebo</name>
  <version>1.0.0</version>
  <description>This package allows to load a iiwa and ur robot onto Gazebo</description>
  <author email="liyihui.ing@gmail.com">Yihui Li</author>
  <maintainer email="liyihui.ing@gmail.com">Yihui Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>iiwa_ur_description</depend>
  <depend>gazebo_ros</depend>

</package>
